--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,13 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "dijskta.C": "cpp",
+        "Huffman.C": "cpp",
+        "Naive.C": "cpp",
+        "Rabin.C": "cpp",
+        "DuplicateArray.C": "cpp",
+        "Test15-10-23.C": "cpp",
+        "Test1.C": "cpp"
     }
 }
